# databases-cw

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: docker-image.yml
src/: CMakeLists.txt  cw.sql  ddl.cpp  ddl.h  ddl.sql  main.cpp  main.hpp  run.sh  util.h  util.hpp
